# butterfly

./: .gitmodules  CMakeLists.txt  README.md  bla
.github/workflows/: cred-scan.yml
api/client/: CMakeLists.txt  README  all_infos.cc  client.cc  client.h  dump.cc  nic.cc  request.cc  sg.cc  shutdown.cc  status.cc
api/client/examples/MessageV0/: app_config  app_quit  app_status  nic_add  nic_del  nic_export  nic_list  nic_stats  nic_update  several_messages  sg_add  sg_del  sg_list  sg_member_add  sg_member_del  sg_member_list  sg_rule_add  sg_rule_del  sg_rule_list
api/common/: crypto.cc  crypto.h  vec.h
api/protocol/: CMakeLists.txt  README.md  encrypted.proto  message.proto  message_0.proto  version
api/server/: CMakeLists.txt  api.cc  api.h  api_0.cc  app.cc  app.h  butterfly-server.ini  butterflyd.ini  encrypted.cc  graph.cc  graph.h  model.cc  model.h  original_config.ini  pg.cc  pg.h  server.cc  server.h
api/tests/: run_scenario.sh
benchmarks/: functions.sh  run_benchmarks.sh
doc/: DESCRIPTION.md  deps.json
docker/: Dockerfile  README.md  package.sh
packetgraph/: CMakeLists.txt
packetgraph++/: CMakeLists.txt
packetgraph++/bricks/: CMakeLists.txt  bricks.cpp
packetgraph++/tests/: CMakeLists.txt  test-shared-ptr.cpp  tests.cpp  tests.h
packetgraph++/utils/: CMakeLists.txt  lifecycle.cpp
packetgraph/bricks/: CMakeLists.txt  bricks.c  collect-brick.c  diode-brick.c  firewall-brick.c  nic-brick.c  nop-brick.c  switch-brick.c  vhost-user-brick.c
packetgraph/examples/: CMakeLists.txt
packetgraph/include/: packetgraph.h
packetgraph/tests/: CMakeLists.txt  test-brick-flow.c  test-firewall.c  test-nic.c  test-vhost.c  tests.c  tests.h
packetgraph/utils/: CMakeLists.txt  config.c  eth.c  lifecycle.c  mempool.c
scripts/: benchmark-docker-file  build_dpdk.sh  build_fat_package.sh  build_jenkins  build_package.sh  build_packetgraph.sh  butterfly.service  cpplint.py  dep-gets.sh  docker_bench.sh  docker_bench_build.sh  error_print.sh  genHdrVersion.sh  make_packetgraph.sh  show_butterfly_state.sh  sonar-project.properties  start_dperf_docker.sh  start_dperf_docker_serv.sh  start_qemu.sh  tests_all.sh  tests_api.sh  tests_api_style.sh  tests_coverage.sh  tests_crypto.sh  tests_firewall.sh  tests_icmp.sh  tests_list.sh  tests_other.sh  tests_packetgraph++.sh  tests_packetgraph_style.sh  tests_scenario.sh  tests_sctp.sh  tests_tcp.sh  tests_udp.sh  tests_udp_tcp.sh  upload_packages.sh
tests/: README.md  functions.sh
tests/00_ping_2BT_2VM/: test.sh
tests/01_ping_1BT_2VM/: test.sh
tests/02_ping_diff_VNI/: test.sh
tests/03_loop_nic_create/: test.sh
tests/04_ping_2BT_4VM/: test.sh
tests/05_ping_2BT_ipv4/: test.sh
tests/06_multiple_ipv4_on_nic/: test.sh
tests/07_multiple_ipv4_ipv6_on_nic/: test.sh
tests/08_multiple_ipv6_on_nic/: test.sh
tests/09_invertion_IP/: test.sh
tests/10_add_removing_nic/: test.sh
tests/11_reconnection_VM/: test.sh
tests/12_VNIC_connectivity_on_delete_VM/: test.sh
tests/13_tcp_2VM_1BT_same_VNI/: test.sh
tests/14_tcp_2VM_1BT_diff_VNI/: test.sh
tests/15_tcp_4VM_2BT_same_VNI/: test.sh
tests/16_tcp_4VM_2BT_diff_VNI/: test.sh
tests/17_udp_2VM_1BT_same_VNI/: README.md  test.sh
tests/18_udp_2VM_1BT_diff_VNI/: README.md  test.sh
tests/20_udp_4VM_2BT_diff_VNI/: test.sh
tests/21_firewall_all_open_udp_tcp_2VM_1BT/: test.sh
tests/22_firewall_all_open_udp_tcp_2VM_1BT/: test.sh
tests/23_bypass_IPv6_2VM/: test.sh
tests/24_SG_add_rule/: test.sh
tests/25_iperf_udp_tcp_2BT/: test.sh
tests/26_reliable_udp_tcp/: test.sh
tests/27_reliable_sctp/: test.sh
tests/28_firewall_all_open_icmp_2VM_1BT/: test.sh
tests/29_firewall_2SG_udp_ports_2VM_1BT/: test.sh
tests/30_firewall_2SG_udp_ports_3VM_1BT/: test.sh
tests/31_firewall_other_SG_comm/: test.sh
tests/32_firewall_udp_cumul_SG/: test.sh
tests/33_firewall_tcp_port_allow_2VM/: test.sh
tests/34_firewall_udp_port_allow_2VM_1BT/: test.sh
tests/35_firewall_iperf_iperf3_2VM_1BT/: test.sh
tests/36_1SG_udp_tcp_ports_3VM_1BT/: test.sh
tests/37_1SG_udp_tcp_ports_2VM_1BT/: test.sh
tests/38_firewall_1SG_udp_port_loop_2VM_1BT/: README.md  test.sh
tests/39_firewall_1SG_tcp_udp_loop/: test.sh
tests/40_firewall_1SG_rules_modif_tcp_udp/: test.sh
tests/41_firewall_ipv4_ipv6_2VM/: test.sh
tests/42_firewall_multiple_ip_update/: test.sh
tests/43_firewall_multiple_ip_update_nic_changes/: test.sh
tests/44_firewall_nic_hotadd_ip/: test.sh
tests/45_ping_dhcp_2vm_2bt/: test.sh
tests/46_encryption/: test.sh
tests/47_ping_iperf3_1tap_2VM_2BT/: test.sh
tests/48_ping_iperf3_2tap_2VM_2BT/: test.sh
tests/49_cli_reliable/: test.sh
tests/50_net_bonding_2VM_2BT/: test.sh
tests/51_bypass_packet_tracing/: test.sh
tests/52_firewall_packet_tracing/: test.sh
tests/53_loop_firewall_packet_tracing/: test.sh
tests/54_loop_bypass_packet_tracing/: test.sh
tests/55_firewall_no_packet_tracing_on_server/: test.sh
tests/56_firewall_packet_path_tracing/: test.sh
tests/57_firewall_outbonding_filtering_work/: test.sh
tests/58_ping_qemu_tap_diff_BT/: test.sh
tests/59_tap_connection_1BT/: test.sh
tests/60_dump_load_BT_config/: test.sh
tests/61_bench_nic_1BT/: test.sh
tests/62_bench_nic_2BT/: test.sh
tests/api/: run_scenario.sh
tests/scenario_0/: README.md  test.sh
tests/scenario_00/: README.md  test.sh
tests/scenario_01/: README.md  test.sh
tests/scenario_02/: README.md  test.sh
tests/scenario_03/: README.md  test.sh
tests/scenario_04/: README.md  test.sh
tests/scenario_05/: test.sh
tests/scenario_06/: README.md  test.sh
tests/scenario_07/: test.sh
tests/scenario_08/: test.sh
tests/scenario_09/: README.md  test.sh
tests/scenario_1/: test.sh
tests/scenario_10/: README.md  test.sh
tests/scenario_11/: README.md  test.sh
tests/scenario_12/: test.sh
tests/scenario_13/: README.md  test.sh
tests/scenario_14/: test.sh
tests/scenario_15/: README.md  test.sh
tests/scenario_16/: README.md  test.sh
tests/scenario_17/: README.md  test.sh
tests/scenario_18/: README.md  test.sh
tests/scenario_19/: README.md  (+1 more)
(+172 files in other folders)
